<resources>
    <string name="app_name">Koch-App</string>
    <string name="recipe">Rezept</string>
    <string name="recipe_list">Rezept-Liste</string>
    <string name="best_recipe">bestes Rezept</string>
    <string name="random_recipe">Zufallsrezept</string>
    <string name="fast_recipe">schnelles Rezept</string>
    <string name="new_recipe">neues Rezept</string>
    <string name="recipe_title">Recipe</string>
    <string name="plusButton">+</string>
    <string name="minusButton">-</string>
    <string name="readyButton">Fertig</string>
    <string name="recipeName">Rezeptname</string>
    <string name="ingredients">Zutaten</string>
    <string name="numOfServings">Anzahl Portionen</string>
    <string name="recipeText">Arbeitsschritte</string>
    <string name="saveButton">Speichern</string>
    <string name="advancedSaveButton">Speichern \n und Rezept \n anzeigen</string>
    <string name="inputRecipeName">Rezeptname eingeben</string>
    <string name="inputRecipeIngredients">Zutaten eintragen</string>
    <string name="inputServings">Anzahl der Portionen angeben</string>
    <string name="inputWorkingstep">Arbeitsschritt angeben</string>
    <string name="title_activity_rating_">Arbeitsschritt angeben</string>
    <string name="edit">edit</string>
    <string name="changeRecipe">weitere Bestandteile des Rezept ändern? \n Bewertung wird dabei gespeichert</string>
    <string name="saveRecipe">Rezept nicht weiter verändern und \n Bewertung speichern?</string>
    <string name="IngrAct_saveButton">Zutat speichern</string>
    <string name="IngrAct_einheitEditText">Einheit</string>
    <string name="IngrAct_mengeEditText">Menge</string>
    <string name="IngrAct_nameEditText">Zutat</string>
    <string name="no">Nein</string>
    <string name="yes">Ja</string>
    <string name="ok">OK</string>
    <string name="cancel">Abbrechen</string>
    <string name="ringToneClapping">Applaus</string>
    <string name="ringToneTrumpet">Trompete</string>
    <string name="ringToneEagle">Adler</string>
    <string name="ringToneWolf">Wolf</string>
    <string name="timerStart">Timer starten</string>
    <string name="rating">Bewerten / ändern</string>
    <string name="servings">Portionen</string>
    <string name="title_activity_test">TestActivity</string>
    <string name="startCookingButton">Kochen starten</string>
    <string name="resetButton">Reset</string>
    <string name="editTextForHours">Zeit in Stunden</string>
    <string name="editTextForMinutes">Zeit in Minuten</string>
    <string name="editTextForSeconds">Zeit in Sekunden</string>
    <string name="ringtoneButton">Klingelton ändern</string>
    <string name="saveSingleWorkStepButton">Eintragen</string>
    <string name="workStepEditText">Arbeitsschritt</string>
    <string name="saveAllWorkStepsButton">Liste speichern</string>
    <string name="deleteRecipeButton">Rezept löschen</string>
</resources>
