<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.ninah.cooking_app.CookingTimerActivity">

    <Button
        android:id="@+id/startCookingButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:text="@string/startCookingButton"
        android:layout_below="@+id/guideline"
        android:layout_centerHorizontal="true" />

    <Button
        android:id="@+id/resetButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/resetButton"
        android:layout_above="@+id/ringtoneButton"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="22dp" />

    <EditText
        android:id="@+id/editTextForHours"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="84dp"
        android:layout_marginStart="84dp"
        android:layout_marginTop="156dp"
        android:ems="10"
        android:hint="@string/editTextForHours"
        android:inputType="numberSigned|numberDecimal" />

    <EditText
        android:id="@+id/editTextForSeconds"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/editTextForSeconds"
        android:inputType="numberSigned|numberDecimal"
        android:layout_marginStart="84dp"
        android:layout_marginTop="242dp"
        android:layout_marginLeft="84dp" />

    <EditText
        android:id="@+id/editTextForMinutes"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="84dp"
        android:layout_marginStart="84dp"
        android:layout_marginTop="199dp"
        android:ems="10"
        android:hint="@string/editTextForMinutes"
        android:inputType="numberSigned|numberDecimal" />

    <TextView
        android:id="@+id/textViewTimer"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="26dp"
        android:gravity="center"
        android:text="***hier wird Timer angezeigt***"
        android:textSize="32sp"
        android:layout_below="@+id/startCookingButton"
        android:layout_centerHorizontal="true" />

    <Button
        android:id="@+id/ringtoneButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/ringtoneButton"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true" />


</RelativeLayout>
