<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.ninah.cooking_app.WorkStepActivity">

    <Button
        android:id="@+id/saveSingleWorkStepButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/saveSingleWorkStepButton"
        android:layout_below="@+id/workStepEditText"
        android:layout_centerHorizontal="true" />

    <ListView
        android:id="@+id/workStepsListView"
        android:layout_width="wrap_content"
        android:layout_height="284dp"
        android:layout_below="@+id/saveSingleWorkStepButton"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <EditText
        android:id="@+id/workStepEditText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/workStepEditText"
        android:inputType="textPersonName"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <Button
        android:id="@+id/saveAllWorkStepsButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/saveAllWorkStepsButton"
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

</RelativeLayout>
