<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:baselineAligned="false">


    <ScrollView
        android:layout_width="fill_parent"
        android:layout_height="match_parent"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true">

        <RelativeLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true"
                android:layout_alignParentTop="true"
                android:text="@string/recipeName"
                android:visibility="visible" />

            <RatingBar
                android:id="@+id/ratingBar"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true"
                android:layout_below="@+id/title"
                android:layout_marginTop="11dp"
                android:layout_toLeftOf="@+id/reStAc_rateRecipeButton"
                android:layout_toStartOf="@+id/reStAc_rateRecipeButton"
                android:clickable="false"
                android:numStars="5"
                android:stepSize="1" />

            <Button
                android:id="@+id/reStAc_rateRecipeButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"

                android:layout_alignParentEnd="true"
                android:layout_alignParentRight="true"
                android:layout_alignTop="@+id/ratingBar"
                android:text="@string/rating" />

            <TextView
                android:id="@+id/servings"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"

                android:layout_alignBottom="@+id/numberOfServings"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true"
                android:text="@string/servings" />

            <TextView
                android:id="@+id/numberOfServings"
                android:layout_width="110dp"
                android:layout_height="110dp"
                android:layout_centerVertical="true"
                android:layout_toEndOf="@+id/servings"
                android:layout_toRightOf="@+id/servings"
                android:text="" />

            <Button
                android:id="@+id/plus"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/ratingBar"
                android:layout_toLeftOf="@+id/minus"
                android:layout_toStartOf="@+id/minus"
                android:text="@string/plusButton"
                android:textAllCaps="false" />

            <Button
                android:id="@+id/minus"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/minusButton"
                android:layout_alignBaseline="@+id/plus"
                android:layout_alignBottom="@+id/plus"
                android:layout_alignParentRight="true"
                android:layout_alignParentEnd="true" />

            <EditText
                android:id="@+id/act_recipe_numberOfServings"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignBaseline="@+id/servings"
                android:layout_alignBottom="@+id/servings"
                android:layout_toLeftOf="@+id/minus"
                android:layout_toStartOf="@+id/minus"
                android:ems="10"
                android:inputType="none"
                android:text="Name" />

            <Button
                android:id="@+id/ready_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/timerStart"
                android:layout_below="@+id/plus"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="14dp" />

            <ListView
                android:id="@+id/ingredients"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentBottom="true"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true"
                android:layout_below="@+id/ready_button"/>

        </RelativeLayout>
    </ScrollView>



    <ListView
        android:id="@+id/workstepText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="341dp"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />


</RelativeLayout>