<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.ninah.cooking_app.Rating_Activity">

    <android.support.design.widget.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:theme="@style/AppTheme.AppBarOverlay">

        <android.support.v7.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="?attr/colorPrimary"
            app:popupTheme="@style/AppTheme.PopupOverlay" />

    </android.support.design.widget.AppBarLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context="com.example.ninah.cooking_app.Rating_Activity"
        tools:showIn="@layout/activity_rating_"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true">

        <RatingBar
            android:id="@+id/ratingRecipe_RatingBar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="115dp"
            android:numStars="5"
            android:stepSize="1"/>

        <TextView
            android:id="@+id/textViewChangeRecipie"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAlignment="center"
            android:text="@string/changeRecipe"
            android:layout_below="@+id/ratingRecipe_RatingBar"
            android:layout_alignLeft="@+id/ratingRecipe_RatingBar"
            android:layout_alignStart="@+id/ratingRecipe_RatingBar"
            android:layout_marginTop="55dp" />

        <Button
            android:id="@+id/ratingRecipe_changeRecipeButton_no"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/yes"
            android:layout_marginTop="45dp"
            android:layout_alignTop="@+id/textViewSaveRecipe"
            android:layout_alignLeft="@+id/ratingRecipe_changeRecipeButton_yes"
            android:layout_alignStart="@+id/ratingRecipe_changeRecipeButton_yes" />

        <Button
            android:id="@+id/ratingRecipe_changeRecipeButton_yes"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/yes"
            android:layout_marginTop="43dp"
            android:layout_alignTop="@+id/textViewChangeRecipie"
            android:layout_centerHorizontal="true" />

        <TextView
            android:id="@+id/textViewSaveRecipe"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAlignment="center"
            android:text="@string/saveRecipe"
            android:layout_marginTop="107dp"
            android:layout_below="@+id/textViewChangeRecipie"
            android:layout_centerHorizontal="true" />

    </RelativeLayout>

</RelativeLayout>
